@startuml

package core {
    interface IPersistenceService {
        + events
        getCrateId()
        canSetCrateId(): boolean
        setCrateId()
        getCrateService()
        createCrateServiceFor(crateId)
        getRepositoryService()
    }

    interface ICrateService {
        + events
        getMetadata()
        setMetadata()
        getFileService()
    }

    note as N1
        if file service is available, this
        method must call file service methods.
        Otherwise, it is responsible for
        providing metadata without a file service
    endnote

    N1 .. ICrateService::setMetadata
    N1 .. ICrateService::getMetadata

    interface IFileService {
        + events
        getContentList()
        getInfo(path)
        getFile(path)
        addFile(path, blob)
        addFolder(path)
        updateFile(path, blob)
        move(src, dst)
        delete(path)
        getStorageQuota()
    }

    interface IRepositoryService {
        + events
        getCratesList()
        createCrateFromZip(zip)
        deleteCrate(crateId)
        getCrateAs(crateId, format)
        getStorageQuota()
    }

    struct StoredCrate {
        name
        description
        crateId
        lastOpenedAt
    }

    note right of IPersistenceService::getCrateService()
        invariant:
        getCrateId() == null
            implies getCrateService() == null
    end note

    IRepositoryService *-- "0..*" StoredCrate
    ICrateService *-- "0..1" IFileService
    IPersistenceService *-- "0..1" ICrateService
    IPersistenceService *-- "0..1" IRepositoryService
}



@enduml